[package]
name = "str0m-openssl"
version = "0.2.0"
authors = ["Martin Algesten <martin@algesten.se>"]
description = "OpenSSL backend for str0m WebRTC"
license = "MIT OR Apache-2.0"
repository = "https://github.com/algesten/str0m"
readme = "README.md"
edition = "2024"

# MSRV
rust-version = "1.85.0"

[features]
vendored = ["openssl/vendored"]
prefer_dimpl = ["dep:dimpl"]

[dependencies]
tracing = "0.1.37"
str0m-proto = { version = "0.2.0", path = "../../proto", features = ["openssl"] }
openssl = { version = "0.10.70" }
openssl-sys = { version = "0.9.80" }
libc = { version = "0.2" }
#dimpl = { version = "0.4.3", default-features = false, optional = true }
dimpl = {git = "https://github.com/algesten/dimpl.git", default-features = false, optional = true}

[dev-dependencies]
arrayvec = "0.7"